fix overflow

--- a/style.css
+++ b/style.css
@@ -268,8 +268,8 @@ p:not(:last-child) {
   transition: transform 0.3s ease-in-out;
   /* transition: opacity 3s ease-in-out; */
   /* background-color: pink; */
-  transform: translateX(-100%);
-  /* z-index: -1; */
+  transform: translateY(-100%);
+  z-index: -1;
 }
 
 .button__settings--delete-all {
@@ -284,7 +284,7 @@ p:not(:last-child) {
 }
 
 .translateX {
-  transform: translateX(0);
+  transform: translateY(0);
 }
 
 /* Footer */
